# projetos-faculdade

./: README.md  introducao_redes_neurais.ipynb
estrutura_de_dados/: calculadora.c  desafio_1.c  desafio_2.c  desafio_3.c  desafio_4.c  desafio_5.c  desafio_6.c  par_ou_impar.c  serquencia_de_termos.c
poo/Herança/src/: App.java
poo/Imc/src/: Pessoa.java
segundo-periodo/banco_de_dados/: pagila_queries.sql
segundo-periodo/estrutura_de_dados/: aumentar_preco.c  ordenacao  soma_de_termos.c
segundo-periodo/estrutura_de_dados/Algoritmos de busca/: binary_search.c  binary_search.go  fila.c  pilha.c
segundo-periodo/estrutura_de_dados/output/: binary_search  desafio  order  sort  sort_random
segundo_periodo/estrutura_de_dados/: a.out  arvore.c  calcular_media.c  fila  fila.c  ordenacao.c  order  order.c  pilha  pilha.c  sort.c  sort_random.c
segundo_periodo/estrutura_de_dados/Algoritmos de busca/: arvore.c  binary_search.c  binary_search.go  sort.c  sort_random.c
segundo_periodo/estrutura_de_dados/output/: arvore  fila  sort_random
sistemas_operacionais/Threads/: ContadorArray.java
terceiro-periodo/arquitetura-software/: test.js
terceiro-periodo/estatistica/: pyproject.toml
terceiro-periodo/estatistica/Atividade01/: aprendendo-estatistica.code-workspace  atividade01.ipynb  data.xlsx
terceiro-periodo/estatistica/Atividade02/: desafio2.ipynb  desafio2.py
terceiro-periodo/estatistica/Atividade03/: atividade.ipynb
terceiro-periodo/estatistica/Atividade03/Class/: EstatisticaDescritiva.py  test_EstatisticaDescritiva.py
(+79 files in other folders)
